--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Fantasy Draft Game" />
-    <title>Fantasy Draft</title>
+    <meta name="theme-color" content="#00d4ff" />
+    <meta name="description" content="BidBlitz - Fantasy Sports Auction Drafts" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="BidBlitz" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <title>BidBlitz</title>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
